--- a/excercises/exercises.ipynb
+++ b/excercises/exercises.ipynb
@@ -29,9 +29,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Excercise 1\n",
-    "\n",
-    "## Implementation of lcg"
+    "# Excercise 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation of lcg\n"
    ]
   },
   {
@@ -275,9 +280,9 @@
     "u = np.random.rand(n)\n",
     "\n",
     "geometric = np.floor(np.log(u) / np.log(1 - p)) + 1\n",
-    "num, counts = np.unique(geometric, return_counts=True)\n",
+    "cov, counts = np.unique(geometric, return_counts=True)\n",
     "plt.figure(figsize=(10, 5))\n",
-    "plt.bar(num, counts / n)\n",
+    "plt.bar(cov, counts / n)\n",
     "plt.yscale('log')\n",
     "plt.title('Geometric distribution')\n",
     "plt.show()"
@@ -516,6 +521,438 @@
     "ax[1].set_title('Var p-values')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Literal\n",
+    "import math\n",
+    "\n",
+    "import tqdm.notebook as tqdm\n",
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "from IPython.display import clear_output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_experiments = 10\n",
+    "\n",
+    "num_service_units = 10\n",
+    "mean_service_time = 8.\n",
+    "num_customers = 10_000\n",
+    "\n",
+    "# exp and erlang\n",
+    "mean_customer_arrival_time = 1.\n",
+    "\n",
+    "# hyp_exp\n",
+    "p = np.array([0.8, 0.2])\n",
+    "_lambdas = np.array([0.8333, 5.])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrival_process: Literal['exp', 'erlang', 'hyp_exp']\n",
+    "service_process: Literal['exp', 'constant', 'pareto1.05', 'pareto2.05']\n",
+    "\n",
+    "results_dict = dict(params=dict(\n",
+    "    num_experiments=num_experiments,\n",
+    "    num_service_units=num_service_units,\n",
+    "    mean_service_time=mean_service_time,\n",
+    "    num_customers=num_customers,\n",
+    "    mean_customer_arrival_time=mean_customer_arrival_time,\n",
+    "    p=p,\n",
+    "    _lambdas=_lambdas\n",
+    "))\n",
+    "\n",
+    "# for arrival_process in tqdm.tqdm(['exp', 'erlang', 'hyp_exp'], 'arrival_process', leave=False):\n",
+    "for arrival_process in tqdm.tqdm(['exp'], 'arrival_process', leave=False):\n",
+    "    clear_output(wait=True)\n",
+    "    results_dict[arrival_process] = dict()\n",
+    "\n",
+    "    for service_process in tqdm.tqdm(['exp', 'constant', 'pareto1.05', 'pareto2.05'], 'service_process', leave=False):\n",
+    "\n",
+    "        if service_process == 'exp':\n",
+    "            get_service_time = lambda: stats.expon.rvs(scale=mean_service_time)\n",
+    "        elif service_process == 'constant':\n",
+    "            get_service_time = lambda: mean_service_time\n",
+    "        elif service_process == 'pareto1.05':\n",
+    "            get_service_time = lambda: stats.pareto.rvs(1.05)\n",
+    "        elif service_process == 'pareto2.05':\n",
+    "            get_service_time = lambda: stats.pareto.rvs(2.05)\n",
+    "        else:\n",
+    "            ValueError(service_process)\n",
+    "\n",
+    "        results = np.empty(num_experiments, dtype=int)\n",
+    "        service_units = np.zeros(num_service_units)\n",
+    "        for i in tqdm.trange(num_experiments, desc='experiments', leave=False):\n",
+    "            \n",
+    "            if arrival_process == 'exp':\n",
+    "                time_between_customer_arrivals = stats.expon.rvs(\n",
+    "                    scale=mean_customer_arrival_time,\n",
+    "                    size=num_customers)\n",
+    "            elif arrival_process == 'erlang':\n",
+    "                time_between_customer_arrivals = stats.erlang.rvs(\n",
+    "                    mean_customer_arrival_time,\n",
+    "                    scale=mean_customer_arrival_time,\n",
+    "                    size=num_customers)\n",
+    "            elif arrival_process == 'hyp_exp':\n",
+    "                scales = (1 / _lambdas)[np.random.choice(2, size=num_customers, p=p)]\n",
+    "                time_between_customer_arrivals = np.random.exponential(scale=scales)\n",
+    "            else:\n",
+    "                ValueError(arrival_process)\n",
+    "\n",
+    "            unserved_customers = 0\n",
+    "            for c in tqdm.tqdm(time_between_customer_arrivals, 'run', leave=False, disable=True):\n",
+    "                service_units -= c\n",
+    "                free_counters, = np.where(service_units <= 0)\n",
+    "\n",
+    "                if len(free_counters):\n",
+    "                    service_units[free_counters[0]] = get_service_time()\n",
+    "                else:\n",
+    "                    unserved_customers += 1\n",
+    "\n",
+    "            results[i] = unserved_customers\n",
+    "        \n",
+    "        results_dict[arrival_process][service_process] = results\n",
+    "\n",
+    "np.save('results.npy', results_dict)\n",
+    "clear_output(wait=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_dict = np.load('results.npy', allow_pickle=True).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = mean_service_time / mean_customer_arrival_time\n",
+    "numerator = A ** num_service_units / math.factorial(num_service_units)\n",
+    "denominator = np.sum([A ** i / math.factorial(i) for i in range(num_service_units)])\n",
+    "p_erlang = numerator / denominator\n",
+    "\n",
+    "print(f'p_erlang={p_erlang:.3f}')\n",
+    "print()\n",
+    "\n",
+    "for service_dist, num_unserviced in results_dict['exp'].items():\n",
+    "    print(service_dist)\n",
+    "    p_hat = num_unserviced.mean() / num_customers\n",
+    "    n = num_customers * num_experiments\n",
+    "    diff = 1.96 * np.sqrt(p_hat * (1 - p_hat) / n)\n",
+    "    print(f'p_hat={p_hat:.3f}, 95% CI=({p_hat - diff:.3f}, {p_hat + diff:.3f})')\n",
+    "\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def monte_carlo(n: int) -> float:\n",
+    "    u = np.random.uniform(0, 1, n)\n",
+    "    return np.exp(u).mean()\n",
+    "\n",
+    "\n",
+    "def antithetic(n: int) -> float:\n",
+    "    u = np.random.uniform(0, 1, n)\n",
+    "    x = np.exp(u)\n",
+    "    return (x + np.exp(1) / x).mean() / 2\n",
+    "\n",
+    "\n",
+    "def control_variate(n: int) -> float:\n",
+    "    u = np.random.uniform(0, 1, n)\n",
+    "    x = np.exp(u)\n",
+    "    cov, var = np.cov(x, u)[1]\n",
+    "    c = -cov / var\n",
+    "    z = x + c * (u - 0.5)\n",
+    "    return z.mean()\n",
+    "\n",
+    "\n",
+    "def stratified(n: int, n_strata: int=10) -> float:\n",
+    "    strata = np.linspace(0, 1, n_strata, endpoint=False)[:, None]\n",
+    "    u = np.random.uniform(0, 1 / n_strata, (n_strata, n))\n",
+    "    return np.exp(strata + u).mean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats\n",
+    "mu = 0\n",
+    "std = 1\n",
+    "a = 1.9\n",
+    "num_dec = 5\n",
+    "\n",
+    "# monte carlo\n",
+    "u = np.random.uniform(0, 1, n)\n",
+    "f = stats.norm.ppf(u, mu, std)\n",
+    "prob_mc = np.mean(f > a)\n",
+    "\n",
+    "# importance sampling\n",
+    "u = np.random.uniform(0, 1, n)\n",
+    "g = stats.norm.ppf(u, a, std)\n",
+    "prob_is = np.mean((g > a) * stats.norm.pdf(g, mu, std) / stats.norm.pdf(g, a, std))\n",
+    "\n",
+    "print(f'Ground truth: {1 - stats.norm.cdf(a, mu, std):.{num_dec}f}')\n",
+    "print(f'monte carlo: {prob_mc:.{num_dec}f}')\n",
+    "print(f'importance sampling: {prob_is:.{num_dec}f}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excercise 6\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "import numpy as np\n",
+    "import tqdm.notebook as tqdm\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy import stats\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_lambda = 1.\n",
+    "s = 8\n",
+    "A = _lambda * s\n",
+    "m = 10\n",
+    "n = 1_000_000\n",
+    "\n",
+    "truncated_poisson = lambda i: A ** i / math.factorial(i)\n",
+    "P = np.array([truncated_poisson(i) for i in range(m)])\n",
+    "\n",
+    "x = 7\n",
+    "accepted = np.empty(n, dtype=bool)\n",
+    "samples = np.empty(n, dtype=int)\n",
+    "for i in tqdm.trange(n):\n",
+    "    x_proposal = np.random.choice(m)\n",
+    "    acc = np.random.rand() < truncated_poisson(x_proposal) / truncated_poisson(x)\n",
+    "    if acc:\n",
+    "        x = x_proposal\n",
+    "    accepted[i] = acc\n",
+    "    samples[i] = x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "ax[0].plot(np.cumsum(accepted) / np.arange(1, n + 1))\n",
+    "ax[0].set_title('Acceptance rate')\n",
+    "ax[1].plot(samples, range(n-1, -1, -1))\n",
+    "ax[1].set_title('Samples')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts = np.zeros(m)\n",
+    "state, _counts = np.unique(samples, return_counts=True)\n",
+    "counts[state] = _counts\n",
+    "\n",
+    "plt.title(f'Sample distribution comparison, p-value={stats.chisquare(counts, P/P.sum() * n).pvalue:.2}')\n",
+    "plt.bar(np.arange(m)-0.25, counts / n, np.full(m, 0.5), edgecolor='black', label='MCMC')\n",
+    "plt.bar(np.arange(m)+0.25, P/P.sum(), np.full(m, 0.5), edgecolor='black', label='Truncated Poisson')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A1 = A2 = 4\n",
+    "m = 10\n",
+    "n = 1_000_000\n",
+    "\n",
+    "truncated_poisson = lambda i, j: A1 ** i / math.factorial(i) * A2 ** j / math.factorial(j)\n",
+    "P = np.array([[truncated_poisson(i,j) for i in range(m)] for j in range(m)])\n",
+    "\n",
+    "x = np.array([l for l, *_ in np.where(P == P.max())], dtype=int)\n",
+    "accepted = np.empty(n, dtype=bool)\n",
+    "MH_samples = np.empty((n, 2), dtype=int)\n",
+    "for i in tqdm.trange(n):\n",
+    "    x_proposal = np.random.choice(m, size=2, replace=True)\n",
+    "    u = np.random.rand()\n",
+    "    acc = u < truncated_poisson(*x_proposal) / truncated_poisson(*x)\n",
+    "    if acc:\n",
+    "        x = x_proposal\n",
+    "    accepted[i] = acc\n",
+    "    MH_samples[i] = x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.collections import LineCollection\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "ax[0].plot(np.cumsum(accepted) / np.arange(1, n + 1))\n",
+    "ax[0].set_title('Acceptance rate')\n",
+    "\n",
+    "\n",
+    "points = MH_samples[:, None, :]\n",
+    "segments = np.concatenate([points[:-1], points[1:]], axis=1)\n",
+    "\n",
+    "lc = LineCollection(segments, cmap='viridis', norm=plt.Normalize(0, n), alpha=0.1)\n",
+    "lc.set_array(np.arange(n))\n",
+    "lc.set_linewidth(2)\n",
+    "line = ax[1].add_collection(lc)\n",
+    "fig.colorbar(line, ax=ax[1])\n",
+    "\n",
+    "ax[1].set_xlim(0, m-1)\n",
+    "ax[1].set_ylim(0, m-1)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A1 = A2 = 4\n",
+    "m = 10\n",
+    "n = 1_000_000\n",
+    "n_dims = 2\n",
+    "\n",
+    "truncated_poisson = lambda i, j: A1 ** i / math.factorial(i) * A2 ** j / math.factorial(j)\n",
+    "P = np.array([[truncated_poisson(i,j) for i in range(m)] for j in range(m)])\n",
+    "\n",
+    "x = np.array([l for l, *_ in np.where(P == P.max())], dtype=int)\n",
+    "accepted = np.empty((n, n_dims), dtype=bool)\n",
+    "CMCMC_samples = np.empty((n, n_dims), dtype=int)\n",
+    "for i in tqdm.trange(n):\n",
+    "    for ii in range(n_dims):\n",
+    "        x_proposal = x.copy()\n",
+    "        x_proposal[ii] = np.random.choice(m)\n",
+    "        u = np.random.rand()\n",
+    "        acc = u < truncated_poisson(*x_proposal) / truncated_poisson(*x)\n",
+    "        if acc:\n",
+    "            x = x_proposal\n",
+    "        \n",
+    "        accepted[i, ii] = acc\n",
+    "    \n",
+    "    CMCMC_samples[i] = x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "for title, samples in zip(\n",
+    "    ('MH', 'CMCMC'),\n",
+    "    (MH_samples, CMCMC_samples)\n",
+    "):\n",
+    "    counts = np.zeros((m, m), dtype=int)\n",
+    "    for key, count in Counter(tuple(x) for x in samples).items():\n",
+    "        counts[key] = count\n",
+    "\n",
+    "    print(title)\n",
+    "    print(stats.chisquare(counts.flatten(), P.flatten() / P.sum() * n).pvalue)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rho = 0.5\n",
+    "\n",
+    "xi, gamma = np.random.multivariate_normal(mean=[0, 0], cov=[[1, rho], [rho, 1]])\n",
+    "theta, phi = np.exp((xi, gamma))\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -534,7 +971,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
