--- a/excercises/exercises.ipynb
+++ b/excercises/exercises.ipynb
@@ -408,7 +408,7 @@
     "\n",
     "def sample_pareto(n: int, k: float, beta: float) -> np.ndarray:\n",
     "    u = np.random.rand(n)\n",
-    "    return beta * (u ** (-1 / k) - 1)\n",
+    "    return beta * np.power(u, -1/k)\n",
     "\n",
     "\n",
     "def sample_gaussian(n: int, mu: float=0, sigma: float=1) -> np.ndarray:\n",
@@ -437,16 +437,17 @@
     "ys = _lambda * np.exp(- _lambda * xs)\n",
     "ax[0].hist(X_exp, bins=50, density=True)\n",
     "ax[0].plot(xs, ys)\n",
-    "ax[0].set_title('Exponential distribution')\n",
+    "ax[0].set_title(f'Exponential distribution, p-value={stats.kstest(X_exp, stats.expon(0, 1/_lambda).cdf).pvalue:.2f}')\n",
     "\n",
     "xs = np.linspace(X_gaussian.min(), X_gaussian.max(), 1_000)\n",
     "ys = np.exp(-((xs - mu) / sigma) ** 2 / 2) / (sigma * np.sqrt(2 * np.pi))\n",
     "ax[1].hist(X_gaussian, bins=50, density=True)\n",
     "ax[1].plot(xs, ys)\n",
-    "ax[1].set_title('Gaussian distribution')\n",
+    "ax[1].set_title(f'Gaussian distribution, p-value={stats.kstest(X_gaussian, stats.norm(mu, sigma).cdf).pvalue:.2f}')\n",
     "\n",
+    "plt.show()\n",
     "\n",
-    "plt.show()\n"
+    "\n"
    ]
   },
   {
@@ -464,13 +465,16 @@
     "):\n",
     "    X_pareto = sample_pareto(n, k, beta)\n",
     "    # ax.hist(X_pareto, bins=50, density=True)\n",
-    "    ax.ecdf(X_pareto)\n",
+    "    ax.ecdf(X_pareto, label='Sampled')\n",
     "    ax.set_title(f'$beta$={beta}, k={k}')\n",
     "\n",
     "    max_val = np.max(X_pareto)\n",
     "    xs = np.linspace(beta, max_val, 10_000)\n",
-    "    ys = 1 - (1 + xs / beta) ** -k\n",
-    "    ax.plot(xs, ys)\n",
+    "    F_pareto = lambda x, k=k, beta=beta: 1 - np.power(beta / x, k)\n",
+    "    ys = F_pareto(xs, k, beta)\n",
+    "    ax.plot(xs, ys, label='Expected')\n",
+    "    ax.legend()\n",
+    "    ax.set_title(f'Pareto distribution, p-value={stats.kstest(X_pareto, F_pareto).pvalue:.2f}')\n",
     "\n",
     "    print(f'{k=}, {beta=}')\n",
     "    print('Expected:')\n",
@@ -497,7 +501,7 @@
     "n = 10\n",
     "mu = 0\n",
     "sigma = 1\n",
-    "num_tests = 10_000\n",
+    "num_tests = 100\n",
     "\n",
     "# estimater, 2.5% and 97.5%\n",
     "means = np.empty(num_tests)\n",
@@ -507,6 +511,39 @@
     "    u = sample_gaussian(n, mu, sigma)\n",
     "    means[i] = np.mean(u)\n",
     "    variances[i] = np.square(u - means[i]).sum() / (n - 1)\n",
+    "\n",
+    "s = np.sqrt(variances)\n",
+    "mu_lower = means + stats.t.ppf(0.025, df=n-1) * s / np.sqrt(n)\n",
+    "mu_upper = means - stats.t.ppf(0.025, df=n-1) * s / np.sqrt(n)\n",
+    "\n",
+    "var_lower = (n - 1) * variances / stats.chi2.ppf(0.975, df=n-1)\n",
+    "var_upper = (n - 1) * variances / stats.chi2.ppf(0.025, df=n-1)\n",
+    "\n",
+    "mean_coverage = np.mean((mu_lower < mu) & (mu_upper > mu))\n",
+    "var_coverage = np.mean((var_lower < sigma ** 2) & (var_upper > sigma ** 2))\n",
+    "\n",
+    "print(f'Mean coverage: {mean_coverage:.2f}')\n",
+    "print(f'Var coverage: {var_coverage:.2f}')\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "ys = np.arange(num_tests)\n",
+    "ax[1].scatter(var_lower, ys, label='Lower')\n",
+    "ax[1].scatter(var_upper, ys, label='Upper')\n",
+    "ax[1].scatter(variances, ys, label='Estimate')\n",
+    "ax[1].vlines(sigma ** 2, 0, num_tests, color='r', label='True')\n",
+    "ax[1].set_title(f'Variance 95% CI, coverage={var_coverage:.2f}')\n",
+    "ax[1].set_xscale('log')\n",
+    "ax[1].legend()\n",
+    "\n",
+    "ax[0].scatter(mu_lower, ys, label='Lower')\n",
+    "ax[0].scatter(mu_upper, ys, label='Upper')\n",
+    "ax[0].scatter(means, ys, label='Estimate')\n",
+    "ax[0].vlines(mu, 0, num_tests, color='r', label='True')\n",
+    "ax[0].set_title(f'Mean 95% CI, coverage={mean_coverage:.2f}')\n",
+    "ax[0].legend()\n",
+    "\n",
+    "plt.show()\n",
     "\n",
     "t = (means - mu) / (np.sqrt(variances / n))\n",
     "mean_p_values = stats.t.cdf(t, df=n-1)\n",
@@ -520,6 +557,28 @@
     "ax[1].ecdf(var_p_values)\n",
     "ax[1].set_title('Var p-values')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu = 0.5\n",
+    "n = 10_000\n",
+    "\n",
+    "samples = np.random.exponential(\n",
+    "    1/np.random.exponential(1/mu, n))\n",
+    "\n",
+    "xs = np.linspace(samples.min(), samples.max(), 10_000)\n",
+    "F_pareto = lambda x, mu=mu: 1 - 1 / (1 + x / mu)\n",
+    "\n",
+    "plt.plot(xs, F_pareto(xs), label='Expected')\n",
+    "plt.ecdf(samples, label='Sampled')\n",
+    "plt.legend()\n",
+    "plt.title(f'Pareto distribution, p-value={stats.kstest(samples, F_pareto).pvalue:.2f}')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -726,25 +785,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import timeit\n",
+    "\n",
+    "num_init_samples = 10_000\n",
+    "num_tests = 10_000\n",
+    "\n",
+    "total_times = np.array([timeit.timeit(lambda: func(num_init_samples), number=num_tests)\n",
+    "                        for func in (monte_carlo, antithetic, control_variate, stratified)])\n",
+    "total_times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_samples = np.floor(total_times[0] / total_times * num_init_samples).astype(int)\n",
+    "num_samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_times_adjusted = np.array([timeit.timeit(lambda: func(_n), number=num_tests)\n",
+    "                        for func, _n in zip(\n",
+    "                            (monte_carlo, antithetic, control_variate, stratified),\n",
+    "                            num_samples)])\n",
+    "total_times_adjusted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimates = [[func(_n) for _ in range(10_000)]\n",
+    "              for func, _n in zip(\n",
+    "                  (monte_carlo, antithetic, control_variate, stratified),\n",
+    "                  num_samples)]\n",
+    "estimates = np.array(estimates)\n",
+    "np.var(estimates, axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from scipy import stats\n",
     "mu = 0\n",
-    "std = 1\n",
-    "a = 1.9\n",
+    "var = 1\n",
+    "a = 4\n",
     "num_dec = 5\n",
+    "n = 100_000\n",
     "\n",
     "# monte carlo\n",
     "u = np.random.uniform(0, 1, n)\n",
-    "f = stats.norm.ppf(u, mu, std)\n",
+    "f = stats.norm.ppf(u, mu, var)\n",
     "prob_mc = np.mean(f > a)\n",
     "\n",
     "# importance sampling\n",
-    "u = np.random.uniform(0, 1, n)\n",
-    "g = stats.norm.ppf(u, a, std)\n",
-    "prob_is = np.mean((g > a) * stats.norm.pdf(g, mu, std) / stats.norm.pdf(g, a, std))\n",
+    "g = stats.norm(a, var).rvs(n)\n",
+    "prob_is = np.mean((g > a) * stats.norm(mu, var).pdf(g) / stats.norm(a, var).pdf(g))\n",
     "\n",
-    "print(f'Ground truth: {1 - stats.norm.cdf(a, mu, std):.{num_dec}f}')\n",
-    "print(f'monte carlo: {prob_mc:.{num_dec}f}')\n",
-    "print(f'importance sampling: {prob_is:.{num_dec}f}')\n"
+    "print(f'Ground truth: {1 - stats.norm(mu, var).cdf(a):.{num_dec}}')\n",
+    "print(f'monte carlo: {prob_mc:.{num_dec}}')\n",
+    "print(f'importance sampling: {prob_is:.{num_dec}}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 100\n",
+    "num_repeats = 500\n",
+    "lambdas = np.linspace(0.05, 6, 100)\n",
+    "\n",
+    "retults = np.empty((num_repeats, len(lambdas)))\n",
+    "for i, _lambda in tqdm.tqdm(enumerate(lambdas), leave=False, total=len(lambdas)):\n",
+    "    for ii in range(num_repeats):\n",
+    "        g = stats.expon(0, 1/_lambda).rvs(n)\n",
+    "        int_is = np.exp(g) * (g < 1) / stats.expon(0, 1/_lambda).pdf(g)\n",
+    "        retults[ii, i] = int_is.mean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ys = np.var(retults, axis=0)\n",
+    "plt.plot(lambdas, ys, label='IS variance')\n",
+    "plt.xlabel('$\\lambda$')\n",
+    "plt.ylabel('variance')\n",
+    "plt.vlines(np.exp(1)/2, 0, ys.max(), label='Approximate minimum')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -826,13 +971,6 @@
     "plt.legend()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -971,7 +1109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
