--- a/excercises/exercises.ipynb
+++ b/excercises/exercises.ipynb
@@ -887,7 +887,7 @@
     "plt.plot(lambdas, ys, label='IS variance')\n",
     "plt.xlabel('$\\lambda$')\n",
     "plt.ylabel('variance')\n",
-    "plt.vlines(np.exp(1)/2, 0, ys.max(), label='Approximate minimum')\n",
+    "plt.vlines(np.exp(1)/2, 0, ys.max(), label='Approximate minimum', color='r')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -1109,7 +1109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
