finished for real

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -232,6 +232,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats.chisquare(f_obs, f_exp)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -362,6 +371,7 @@
     "print(f'Control variates estimate of fraction: {mean_adjusted_fraction}')\n",
     "print(f'Variance of control variates estimate: {variance_adjusted}')\n",
     "print(f'Reduction in variance: {variance_crude - variance_adjusted}')\n",
+    "print(f'Percentage reduction in variance: {100 * (variance_crude - variance_adjusted) / variance_crude}%')\n",
     "\n",
     "# Optionally, plot the results\n",
     "plt.hist(fractions, bins=30, alpha=0.5, label='Crude Monte Carlo')\n",
