fixed last task

--- a/project1/project1part2&3.ipynb
+++ b/project1/project1part2&3.ipynb
@@ -11,7 +11,7 @@
     "import scipy.stats as stats\n",
     "import scipy.linalg as linalg\n",
     "import tqdm.notebook as tqdm\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -267,9 +267,12 @@
     "    num_trails: int,\n",
     "    *,\n",
     "    months_between_doctor_visits: int=48,\n",
-    "    state_dict: dict[str, int]=state_dict\n",
-    ") -> np.ndarray:\n",
+    "    state_dict: dict[str, int]=state_dict,\n",
+    "    return_Q_estimators: bool=False\n",
+    ") -> np.ndarray | tuple[np.ndarray, np.ndarray, np.ndarray]:\n",
+    "    \n",
     "    num_states = len(state_dict)\n",
+    "    unique_states = np.arange(num_states, dtype=int)\n",
     "\n",
     "    # when the transition happens\n",
     "    out_rate = -np.diag(Q)\n",
@@ -280,9 +283,12 @@
     "    transition_prob[non_arbsorbing_mask] /= out_rate[non_arbsorbing_mask, None]\n",
     "    np.fill_diagonal(transition_prob, ~non_arbsorbing_mask)\n",
     "\n",
-    "    # init\n",
+    "    # returns\n",
     "    state_time_series = np.zeros((1, num_trails), dtype=int)\n",
+    "    sojourn_times = np.zeros(num_states)\n",
+    "    num_jumps = np.zeros((num_states, num_states), dtype=int)\n",
     "\n",
+    "    # init\n",
     "    start_states = np.full(num_trails, state_dict['no_tumor'])\n",
     "    lifetimes = np.zeros(num_trails)\n",
     "\n",
@@ -292,20 +298,39 @@
     "    # simulate\n",
     "    while np.any(is_alive_mask):\n",
     "\n",
-    "        lifetimes[is_alive_mask] += np.random.exponential(1 / out_rate[current_states[is_alive_mask]])\n",
+    "        # get how long we spend in the current state\n",
+    "        sojourn_time = np.random.exponential(1 / out_rate[current_states[is_alive_mask]])\n",
+    "\n",
+    "        # update the sojourn\n",
+    "        for state in unique_states:\n",
+    "            indxs = np.where(current_states[is_alive_mask] == state)\n",
+    "            sojourn_times[state] += sojourn_time[indxs].sum()\n",
+    "\n",
+    "        # update the life total and the state\n",
+    "        lifetimes[is_alive_mask] += sojourn_time\n",
     "        new_states = np.array([np.random.choice(num_states, p=transition_prob[state]) for state in current_states[is_alive_mask]])\n",
     "\n",
+    "        # update the number of jumps\n",
+    "        for i in unique_states:\n",
+    "            for j in unique_states:\n",
+    "                num_jumps[i, j] += np.sum((current_states[is_alive_mask] == i) & (new_states == j))\n",
+    "\n",
+    "        # update the doctor visit\n",
     "        visit_idx = np.ceil(lifetimes[is_alive_mask] / months_between_doctor_visits).astype(int)\n",
     "        while visit_idx.max() >= state_time_series.shape[0]:\n",
     "            state_time_series = np.concatenate([state_time_series, np.zeros_like(state_time_series)], axis=0)\n",
-    "        \n",
     "        state_time_series[visit_idx, is_alive_mask] = new_states\n",
     "\n",
+    "        # ready for the next iteration\n",
     "        current_states[is_alive_mask] = new_states\n",
     "        is_alive_mask = current_states != state_dict['death']\n",
     "\n",
     "    # fill in the gaps\n",
     "    state_time_series = pd.DataFrame(state_time_series).cummax().to_numpy()\n",
+    "\n",
+    "    if return_Q_estimators:\n",
+    "        return state_time_series, sojourn_times, num_jumps\n",
+    "\n",
     "    return state_time_series\n",
     "\n",
     "\n",
@@ -314,6 +339,9 @@
     "    *,\n",
     "    months_between_doctor_visits: int=48\n",
     ") -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Estimates the initial Q matrix from the observed state time series\n",
+    "    \"\"\"\n",
     "    num_states = state_time_series.max() + 1\n",
     "\n",
     "    Q = np.zeros((num_states, num_states))\n",
@@ -326,7 +354,57 @@
     "            Q[i, j] = transitions / total_time if total_time > 0 else 0\n",
     "\n",
     "    np.fill_diagonal(Q, -Q.sum(axis=1))\n",
-    "    return Q"
+    "    return Q\n",
+    "\n",
+    "\n",
+    "def mcem(\n",
+    "    Q_est,\n",
+    "    state_time_series,\n",
+    "    *,\n",
+    "    months_between_doctor_visits: int=48\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Monte Carlo Expectation Maximization\n",
+    "\n",
+    "    Q_est: initial estimate of the Q matrix\n",
+    "        shape: (num_states, num_states)\n",
+    "    \n",
+    "    state_time_series: observed state time series\n",
+    "        shape: (num_visits, num_trails)\n",
+    "        num_visits is dynamic\n",
+    "    \"\"\"\n",
+    "\n",
+    "    out_rates = -np.diag(Q_est)\n",
+    "    num_states = Q_est.shape[0]\n",
+    "    sojourn_times = np.zeros(num_states)\n",
+    "    num_jumps = np.zeros((num_states, num_states))\n",
+    "\n",
+    "    for trail_idx in range(state_time_series.shape[1]):\n",
+    "        trajectory = state_time_series[:, trail_idx]\n",
+    "        jump_idxs, = np.where(trajectory[:-1] != trajectory[1:])\n",
+    "\n",
+    "        lifetime = 0\n",
+    "        for jump_idx in jump_idxs:\n",
+    "            min_time = jump_idx * months_between_doctor_visits\n",
+    "            max_time = (jump_idx + 1) * months_between_doctor_visits\n",
+    "            current_state = trajectory[jump_idx]\n",
+    "            next_state = trajectory[jump_idx + 1]\n",
+    "\n",
+    "            out_rate = out_rates[current_state]\n",
+    "            while True:\n",
+    "                sojourn_time = np.random.exponential(1 / out_rate)\n",
+    "\n",
+    "                if min_time <= lifetime + sojourn_time <= max_time:\n",
+    "                    lifetime += sojourn_time\n",
+    "                    sojourn_times[current_state] += sojourn_time\n",
+    "                    num_jumps[current_state, next_state] += 1\n",
+    "                    break\n",
+    "    \n",
+    "    Q_est = num_jumps.astype(float)\n",
+    "    Q_est[:-1] /= sojourn_times[:-1, None]\n",
+    "    np.fill_diagonal(Q_est, -Q_est.sum(axis=1))\n",
+    "    \n",
+    "    return Q_est\n"
    ]
   },
   {
@@ -357,8 +435,10 @@
    "outputs": [],
    "source": [
     "observed_lifetimes = simulate_lifetimes(Q, 1000)\n",
+    "num_highlitghed = 5\n",
     "\n",
-    "plt.plot(observed_lifetimes)\n",
+    "plt.plot(observed_lifetimes[:, num_highlitghed:], alpha=0.005, color='k')\n",
+    "plt.plot(observed_lifetimes[:, :num_highlitghed], linewidth=3)\n",
     "plt.xlabel('Doctor visit')\n",
     "plt.ylabel('State')\n",
     "plt.show()\n"
@@ -372,16 +452,22 @@
    "source": [
     "Q_est = estimate_Q_from_obervations(observed_lifetimes)\n",
     "\n",
+    "pbar = tqdm.tqdm()\n",
     "while True:\n",
-    "    simulated_lifetimes = simulate_lifetimes(Q_est, 1000)\n",
-    "    Q_est_new = estimate_Q_from_obervations(simulated_lifetimes)\n",
+    "    Q_est_new = mcem(Q_est, observed_lifetimes)\n",
     "    max_diff = np.abs(Q_est - Q_est_new).max()\n",
     "    Q_est = Q_est_new\n",
-    "    if max_diff < 1e-3: # inf norm\n",
+    "    pbar.update(1)\n",
+    "    if max_diff < 1e-4: # inf norm\n",
+    "        pbar.close()\n",
     "        break\n",
     "\n",
-    "print(np.array2string(Q_est, precision=4, suppress_small=True))\n",
-    "print(np.array2string(Q, precision=4, suppress_small=True))"
+    "print(\n",
+    "    \"Estimated Q matrix:\",\n",
+    "    np.array2string(Q_est, precision=4, suppress_small=True),\n",
+    "    \"True Q matrix:\",\n",
+    "    np.array2string(Q, precision=4, suppress_small=True),\n",
+    "    sep='\\n')"
    ]
   }
  ],
