--- a/excercises/exercises.ipynb
+++ b/excercises/exercises.ipynb
@@ -242,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_random_tests = 10_000\n",
+    "num_random_tests = 100\n",
     "n = 10_000\n",
     "\n",
     "from random import random\n",
@@ -297,7 +297,7 @@
     "def crude_sampling(p: np.array, n: int) -> np.ndarray:\n",
     "    u = np.random.rand(n)\n",
     "    return (u < np.cumsum(p)[:, None]).argmax(axis=0) + 1\n",
-    "100\n",
+    "\n",
     "\n",
     "def rejection_sampling(p: np.ndarray, n: int) -> np.ndarray:\n",
     "    assert np.isclose(np.sum(p), 1), 'p must sum to 1'\n",
@@ -372,18 +372,18 @@
    "source": [
     "fig, ax = plt.subplots(2, 2, figsize=(10, 10))\n",
     "\n",
-    "p_crude = np.bincount(dist_crude, minlength=7)[1:] / n\n",
-    "p_rejection = np.bincount(dist_rejection, minlength=7)[1:] / n\n",
-    "p_alias = np.bincount(dist_alias, minlength=7)[1:] / n\n",
+    "p_crude = np.bincount(dist_crude, minlength=7)[1:]\n",
+    "p_rejection = np.bincount(dist_rejection, minlength=7)[1:]\n",
+    "p_alias = np.bincount(dist_alias, minlength=7)[1:]\n",
     "\n",
     "ax[0, 0].bar(np.arange(1, 7), p)\n",
     "ax[0, 0].set_title('Expected distribution')\n",
     "ax[0, 1].bar(np.arange(1, 7), p_crude)\n",
-    "ax[0, 1].set_title(f'Crude sampling, p-value={stats.chisquare(p, p_crude).pvalue:.2f}')\n",
+    "ax[0, 1].set_title(f'Crude sampling, p-value={stats.chisquare(p_crude, p * n).pvalue:.2f}')\n",
     "ax[1, 0].bar(np.arange(1, 7), p_rejection)\n",
-    "ax[1, 0].set_title(f'Rejection sampling, p-value={stats.chisquare(p, p_rejection).pvalue:.2f}')\n",
+    "ax[1, 0].set_title(f'Rejection sampling, p-value={stats.chisquare(p_rejection, p * n).pvalue:.2f}')\n",
     "ax[1, 1].bar(np.arange(1, 7), p_alias)\n",
-    "ax[1, 1].set_title(f'Alias sampling, p-value={stats.chisquare(p, p_alias).pvalue:.2f}')\n",
+    "ax[1, 1].set_title(f'Alias sampling, p-value={stats.chisquare(p_alias, p * n).pvalue:.2f}')\n",
     "\n",
     "plt.show()\n"
    ]
@@ -565,19 +565,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.random.exponential(10, 10_000).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mu = 0.5\n",
-    "n = 10_000\n",
+    "n = 10_000_000\n",
     "\n",
     "samples = np.random.exponential(\n",
-    "    1/np.random.exponential(1/mu, n))\n",
-    "\n",
-    "xs = np.linspace(samples.min(), samples.max(), 10_000)\n",
+    "    1/np.random.exponential(1/mu, n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs = np.linspace(samples.min(), samples.max(), 100_000)\n",
     "F_pareto = lambda x, mu=mu: 1 - 1 / (1 + x / mu)\n",
+    "f_pareto = lambda x, mu=mu: (1 / mu) / (1 + x / mu) ** 2\n",
     "\n",
-    "plt.plot(xs, F_pareto(xs), label='Expected')\n",
-    "plt.ecdf(samples, label='Sampled')\n",
-    "plt.legend()\n",
-    "plt.title(f'Pareto distribution, p-value={stats.kstest(samples, F_pareto).pvalue:.2f}')\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "ax[0].hist(samples, bins=50, density=True, label='Sampled')\n",
+    "ax[0].plot(xs, f_pareto(xs, mu), label='Expected PDF')\n",
+    "ax[0].set_title('Pareto distribution')\n",
+    "ax[0].set_yscale('log')\n",
+    "ax[0].legend(loc='upper right')\n",
+    "\n",
+    "xs = np.logspace(np.log10(samples.min()), np.log10(samples.max()), 100_000)\n",
+    "\n",
+    "\n",
+    "ax[1].ecdf(samples, label='Sampled')\n",
+    "ax[1].plot(xs, F_pareto(xs, mu), '--', label='Expected CDF')\n",
+    "ax[1].set_title('Pareto distribution')\n",
+    "ax[1].set_xscale('log')\n",
+    "ax[1].legend(loc='upper left')\n",
+    "\n",
+    "fig.suptitle(f'Pareto distribution, p-value={stats.kstest(samples, F_pareto).pvalue:.2f}')\n",
+    "\n",
     "plt.show()\n"
    ]
   },
@@ -787,11 +836,12 @@
    "source": [
     "import timeit\n",
     "\n",
-    "num_init_samples = 10_000\n",
-    "num_tests = 10_000\n",
+    "num_init_samples = 100\n",
+    "num_tests = 1_000\n",
+    "num_redos = 100\n",
     "\n",
-    "total_times = np.array([timeit.timeit(lambda: func(num_init_samples), number=num_tests)\n",
-    "                        for func in (monte_carlo, antithetic, control_variate, stratified)])\n",
+    "total_times = np.array([[timeit.timeit(lambda: func(num_init_samples), number=num_tests)\n",
+    "                        for func in (monte_carlo, antithetic, control_variate, stratified)] for _ in range(num_redos)]).sum(axis=0)\n",
     "total_times"
    ]
   },
@@ -801,7 +851,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_samples = np.floor(total_times[0] / total_times * num_init_samples).astype(int)\n",
+    "estimates = [[func(100) for _ in range(10_000)]\n",
+    "              for func in (monte_carlo, antithetic, control_variate, stratified)]\n",
+    "estimates = np.array(estimates)\n",
+    "np.var(estimates, axis=1), estimates.mean(axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_samples = np.floor(total_times[0] / (total_times) * num_init_samples).astype(int)\n",
     "num_samples"
    ]
   },
@@ -811,10 +873,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_times_adjusted = np.array([timeit.timeit(lambda: func(_n), number=num_tests)\n",
+    "total_times_adjusted = np.array([[timeit.timeit(lambda: func(_n), number=num_tests)\n",
     "                        for func, _n in zip(\n",
     "                            (monte_carlo, antithetic, control_variate, stratified),\n",
-    "                            num_samples)])\n",
+    "                            num_samples)] for _ in range(num_redos)]).sum(axis=0)\n",
     "total_times_adjusted"
    ]
   },
@@ -839,11 +901,12 @@
    "outputs": [],
    "source": [
     "from scipy import stats\n",
+    "import tqdm.notebook as tqdm\n",
     "mu = 0\n",
     "var = 1\n",
     "a = 4\n",
     "num_dec = 5\n",
-    "n = 100_000\n",
+    "n = 100\n",
     "\n",
     "# monte carlo\n",
     "u = np.random.uniform(0, 1, n)\n",
@@ -1109,7 +1172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
